bunch of tweaks

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -18,7 +18,8 @@ artifact.feeding.accum.timer=60.000
 artifact.feeding.accum.min=20.000
 artifact.feeding.single.min=24.000
 artifact.feeding.initial.secs=360000.000
-artifact.feeding.epic.point.seconds=5400.000
+artifact.feeding.epic.point.seconds=2000.000
+#old value = 5400.000
 artifact.feeding.epic.typeMod.zone=0.200
 artifact.feeding.epic.typeMod.pvp=1.125
 artifact.feeding.epic.typeMod.eliteMob=0.075
@@ -165,96 +166,96 @@ damage.modifier.divineforce=1.250
 damage.modifier.meleemastery=1.100
 damage.totalOutput.racial.None=1.000
 damage.totalOutput.racial.Human=1.000
-damage.totalOutput.racial.Barbarian=1.000
-damage.totalOutput.racial.DrowElf=1.000
-damage.totalOutput.racial.GreyElf=1.000
-damage.totalOutput.racial.MountainDwarf=1.000
-damage.totalOutput.racial.DuergarDwarf=1.000
-damage.totalOutput.racial.Halfling=1.000
-damage.totalOutput.racial.Gnome=1.000
-damage.totalOutput.racial.Ogre=1.000
-damage.totalOutput.racial.Troll=1.000
-damage.totalOutput.racial.Half-Elf=1.000
-damage.totalOutput.racial.Illithid=1.000
-damage.totalOutput.racial.Orc=1.000
-damage.totalOutput.racial.Orog=1.000
-damage.totalOutput.racial.Thri-Kreen=1.000
-damage.totalOutput.racial.Centaur=1.000
-damage.totalOutput.racial.Githyanki=1.000
-damage.totalOutput.racial.Minotaur=1.000
-damage.totalOutput.racial.Shade=1.000
-damage.totalOutput.racial.Revenant=1.000
-damage.totalOutput.racial.Goblin=1.000
-damage.totalOutput.racial.Lich=0.000
-damage.totalOutput.racial.Vampire=1.000
+damage.totalOutput.racial.Barbarian=1.400
+damage.totalOutput.racial.DrowElf=0.900
+damage.totalOutput.racial.GreyElf=0.900
+damage.totalOutput.racial.MountainDwarf=1.300
+damage.totalOutput.racial.DuergarDwarf=1.250
+damage.totalOutput.racial.Halfling=1.050
+damage.totalOutput.racial.Gnome=1.100
+damage.totalOutput.racial.Ogre=3.000
+damage.totalOutput.racial.Troll=1.500
+damage.totalOutput.racial.Half-Elf=1.050
+damage.totalOutput.racial.Illithid=0.600
+damage.totalOutput.racial.Orc=1.200
+damage.totalOutput.racial.Orog=2.500
+damage.totalOutput.racial.Thri-Kreen=1.250
+damage.totalOutput.racial.Centaur=1.350
+damage.totalOutput.racial.Githyanki=0.950
+damage.totalOutput.racial.Minotaur=1.675
+damage.totalOutput.racial.Shade=0.750
+damage.totalOutput.racial.Revenant=1.850
+damage.totalOutput.racial.Goblin=1.100
+damage.totalOutput.racial.Lich=0.700
+damage.totalOutput.racial.Vampire=1.400
 damage.totalOutput.racial.Ghaele=1.000
-damage.totalOutput.racial.DeathKnight=1.000
-damage.totalOutput.racial.ShadowBeast=1.000
-damage.totalOutput.racial.StormGiant=1.000
-damage.totalOutput.racial.Wight=1.000
-damage.totalOutput.racial.Phantom=1.000
+damage.totalOutput.racial.DeathKnight=1.800
+damage.totalOutput.racial.ShadowBeast=1.250
+damage.totalOutput.racial.StormGiant=2.000
+damage.totalOutput.racial.Wight=2.400
+damage.totalOutput.racial.Phantom=0.900
 damage.totalOutput.racial.Harpy=1.000
 damage.totalOutput.racial.Gargoyle=1.000
 damage.totalOutput.racial.FireElemental=1.000
 damage.totalOutput.racial.AirElemental=1.000
 damage.totalOutput.racial.WaterElemental=1.000
 damage.totalOutput.racial.EarthElemental=1.000
-damage.totalOutput.racial.Demon=1.000
-damage.totalOutput.racial.Devil=1.000
+damage.totalOutput.racial.Demon=1.500
+damage.totalOutput.racial.Devil=1.200
 damage.totalOutput.racial.Undead=1.000
-damage.totalOutput.racial.Ghost=1.000
-damage.totalOutput.racial.Lycanthrope=1.000
-damage.totalOutput.racial.Giant=1.100
-damage.totalOutput.racial.HalfOrc=1.000
-damage.totalOutput.racial.Golem=1.100
-damage.totalOutput.racial.Faerie=1.000
-damage.totalOutput.racial.Dragon=1.000
-damage.totalOutput.racial.Dragonkin=1.000
-damage.totalOutput.racial.Reptile=1.000
-damage.totalOutput.racial.Snake=1.000
-damage.totalOutput.racial.Insect=1.000
+damage.totalOutput.racial.Ghost=0.800
+damage.totalOutput.racial.Lycanthrope=1.500
+damage.totalOutput.racial.Giant=1.800
+damage.totalOutput.racial.HalfOrc=1.200
+damage.totalOutput.racial.Golem=4.100
+damage.totalOutput.racial.Faerie=0.700
+damage.totalOutput.racial.Dragon=2.000
+damage.totalOutput.racial.Dragonkin=1.800
+damage.totalOutput.racial.Reptile=0.700
+damage.totalOutput.racial.Snake=0.700
+damage.totalOutput.racial.Insect=0.500
 damage.totalOutput.racial.Arachnid=1.000
 damage.totalOutput.racial.AquaticAnimal=1.000
 damage.totalOutput.racial.FlyingAnimal=1.000
-damage.totalOutput.racial.Quadraped=1.000
-damage.totalOutput.racial.Primate=1.000
+damage.totalOutput.racial.Quadraped=1.300
+damage.totalOutput.racial.Primate=1.200
 damage.totalOutput.racial.Humanoid=1.000
 damage.totalOutput.racial.Animal=1.000
-damage.totalOutput.racial.Plant=1.000
+damage.totalOutput.racial.Plant=0.900
 damage.totalOutput.racial.Herbivore=1.000
 damage.totalOutput.racial.Carnivore=1.000
 damage.totalOutput.racial.Parasite=1.000
-damage.totalOutput.racial.Beholder=1.000
-damage.totalOutput.racial.Dracolich=1.000
-damage.totalOutput.racial.Titan=1.000
-damage.totalOutput.racial.Avatar=1.000
-damage.totalOutput.racial.Slime=1.000
-damage.totalOutput.racial.Githzerai=1.000
+damage.totalOutput.racial.Beholder=2.000
+damage.totalOutput.racial.Dracolich=2.500
+damage.totalOutput.racial.Titan=3.000
+damage.totalOutput.racial.Avatar=3.000
+damage.totalOutput.racial.Slime=0.900
+damage.totalOutput.racial.Githzerai=0.940
 damage.totalOutput.racial.Angel=1.000
-damage.totalOutput.racial.Rakshasa=1.000
-damage.totalOutput.racial.Efreet=1.000
-damage.totalOutput.racial.SnowOgre=1.000
-damage.totalOutput.racial.Beholderkin=1.000
+damage.totalOutput.racial.Rakshasa=1.300
+damage.totalOutput.racial.Efreet=2.000
+damage.totalOutput.racial.SnowOgre=3.200
+damage.totalOutput.racial.Beholderkin=2.000
 damage.totalOutput.racial.Archon=1.000
 damage.totalOutput.racial.Asura=1.000
 damage.totalOutput.racial.Bralani=1.000
-damage.totalOutput.racial.Skeleton=1.000
-damage.totalOutput.racial.Zombie=1.000
-damage.totalOutput.racial.Spectre=1.000
-damage.totalOutput.racial.Wraith=1.000
-damage.totalOutput.racial.Shadow=1.000
+damage.totalOutput.racial.Skeleton=1.100
+damage.totalOutput.racial.Zombie=1.200
+damage.totalOutput.racial.Spectre=0.900
+damage.totalOutput.racial.Wraith=0.780
+damage.totalOutput.racial.Shadow=0.800
 damage.totalOutput.racial.Deva=1.000
-damage.totalOutput.racial.Drider=1.000
-damage.totalOutput.racial.PurpleWorm=1.000
+damage.totalOutput.racial.Drider=1.400
+damage.totalOutput.racial.PurpleWorm=2.000
 damage.totalOutput.racial.Agathinon=1.000
 damage.totalOutput.racial.VoidElemental=1.000
-damage.totalOutput.racial.IceElemental=1.000
+damage.totalOutput.racial.IceElemental=1.500
 damage.totalOutput.racial.Eladrin=1.000
-damage.totalOutput.racial.Kobold=1.000
+damage.totalOutput.racial.Kobold=1.150
 damage.totalOutput.racial.Pillithid=1.000
-damage.totalOutput.racial.KuoToa=1.000
-damage.totalOutput.racial.WoodElf=1.000
-damage.totalOutput.racial.Firbolg=1.000
+damage.totalOutput.racial.KuoToa=1.200
+damage.totalOutput.racial.WoodElf=1.200
+damage.totalOutput.racial.Firbolg=2.700
 damage.pulse.class.all=2.000
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=14.000
@@ -890,7 +891,7 @@ stats.wis.Gnome=95.000
 stats.cha.Gnome=80.000
 stats.kar.Gnome=100.000
 stats.luc.Gnome=90.000
-stats.str.Ogre=220.000
+stats.str.Ogre=240.000
 stats.dex.Ogre=65.000
 stats.agi.Ogre=65.000
 stats.con.Ogre=200.000
