Added hardcore_hall_of_fameprod to list of ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ cscope.out
 lib/information/leaderboard
 lib/information/leaderboardprod
 lib/information/hardcore_hall_of_fame
+lib/information/hardcore_hall_of_fameprod
 lib/etc/vote.undead
 lib/information/leaderboardprod
