Added a .gitignore to the new vote, and added name & IP to the vote stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ lib/information/hardcore_hall_of_fame
 lib/information/hardcore_hall_of_fameprod
 lib/information/leaderboardprod
 lib/etc/vote.undead
+lib/etc/vote.miniwipe
 lib/ban_sites
 Ships/ship_index
